--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: N. Bhupathi Reddy
+bio: A Person who is striving to success.
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -20,7 +20,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
+url: https://astakun-devil.github.io/indigo
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
@@ -34,12 +34,8 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-instagram: myinstagram
-linkedin: mylinkedin
-github: mygithub
-email: myemail@gmail.com
+instagram: https://www.instagram.com/bhupathireddy__/
+email: bhupathireddynangu@gmail.com
 
 authors:
   johndoe:
