--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 title: N. Bhupathi Reddy
-bio: A Person who is striving to success.
+bio: The only journey is the journey within.
 
 # twitter summary info
 description: A blog about technology and stuff related
